# data_contamination

./: .gitignore  .pdm-python  README.md  accuracies-masked-2.txt  accuracies.txt  data.py  main.py  model.py  pyproject.toml  ts_guessing.py  utils.py
outputs/: Meta-Llama-3-8B-Instruct-arc_challenge-masked-2.txt  Meta-Llama-3-8B-Instruct-arc_challenge.txt  Meta-Llama-3-8B-Instruct-arc_easy-masked-2.txt  Meta-Llama-3-8B-Instruct-arc_easy.txt  Meta-Llama-3-8B-Instruct-openbookqa-masked-2.txt  Meta-Llama-3-8B-Instruct-openbookqa.txt  Mistral-7B-Instruct-v0.3-arc_challenge-masked-2.txt  Mistral-7B-Instruct-v0.3-arc_challenge.txt  Mistral-7B-Instruct-v0.3-arc_easy-masked-2.txt  Mistral-7B-Instruct-v0.3-arc_easy.txt  Mistral-7B-Instruct-v0.3-openbookqa-masked-2.txt  Mistral-7B-Instruct-v0.3-openbookqa.txt  phi-4-arc_challenge-masked-2.txt  phi-4-arc_challenge.txt  phi-4-arc_easy-masked-2.txt  phi-4-arc_easy.txt  phi-4-openbookqa-masked-2.txt  phi-4-openbookqa.txt
outputs/slurm/: data_contamination_job.err  data_contamination_job.out
scripts/: run_gpu.sh
