[project]
name = "data_contamination"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tim Kolber", email = "tim.kolber@stud.uni-heidelberg.de"},
]
dependencies = ["datasets>=3.4.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
