[project]
name = "data_contamination"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tim Kolber", email = "tim.kolber@stud.uni-heidelberg.de"},
]
dependencies = ["datasets>=3.4.1", "transformers>=4.50.1", "torch>=2.6.0", "torchvision>=0.21.0", "torchaudio>=2.6.0", "huggingface-hub[cli]>=0.29.3", "protobuf>=6.30.1", "sentencepiece>=0.2.0", "accelerate>=1.5.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
